--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,17 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.sideNav::-webkit-scrollbar {
+  width: 3px;
+}
+/*.sideNav{
+  direction: rtl;
+}
+.sideNav>* {
+  direction: ltr;
+}*/
+
+
 .navScrollbar::-webkit-scrollbar {
   width: 5px;
   height: 2px;
